--- a/Metrics.ipynb
+++ b/Metrics.ipynb
@@ -27,7 +27,7 @@
     "$$\n",
     "Specificity = True negative rate\n",
     "$$\n",
-    "Specificity = frac{TN}{TN+FP}\n",
+    "Specificity = \\frac{TN}{TN+FP}\n",
     "$$\n",
     "$$\n",
     "F1 = 2*\\frac{Precision * Recall}{Precision + Recall}\n",
