--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "13522f1c",
    "metadata": {},
    "outputs": [
@@ -130,10 +130,10 @@
       "Lambda: 50    , Average CV MSE: 353.40\n",
       "Lambda: 100   , Average CV MSE: 357.87\n",
       "\n",
-      "--- Cross-Validation Complete ---\n",
+      "Cross-Validation Complete\n",
       "Optimal Lambda found: 0.1\n",
       "\n",
-      "--- Final Performance on Hold-Out Test Set ---\n",
+      "inal Performance on Hold-Out Test Set\n",
       "Tuned Ridge Regression Test MSE:     70.56\n"
      ]
     },
@@ -222,14 +222,14 @@
     "\n",
     "best_lambda_index = np.argmin(cv_scores)\n",
     "best_lambda = lambdas_to_test[best_lambda_index]\n",
-    "print(\"\\n--- Cross-Validation Complete ---\")\n",
+    "print(\"\\nCross-Validation Complete\")\n",
     "print(f\"Optimal Lambda found: {best_lambda}\")\n",
     "\n",
     "final_ridge_model = RidgeRegression(alpha=STABLE_ALPHA, iter=STABLE_ITER, lambda_param=best_lambda)\n",
     "final_ridge_model.fit(X_train_scaled, y_train)\n",
     "final_ridge_mse = mse(y_test, final_ridge_model.predict(X_test_scaled))\n",
     "\n",
-    "print(\"\\n--- Final Performance on Hold-Out Test Set ---\")\n",
+    "print(\"\\ninal Performance on Hold-Out Test Set\")\n",
     "print(f\"Tuned Ridge Regression Test MSE:     {final_ridge_mse:.2f}\")\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
