Neural network theories

--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## SVM\n",
-    "Imagine you have identified a decision boundary, is it the best out all?\\\n",
+    "Imagine you have identified a decision boundary, is it the best out all?\n",
     "\n",
     "As you can see in the Fig1, they both do the job of separating the points into 2 labels\n",
     "\n",
